--- a/.github/workflow/workflow.yml
+++ b/.github/workflow/workflow.yml
@@ -5,12 +5,8 @@ name: GitHub Pages Deploy
 on: 
 
   push: 
-
-    branches: [ main ] 
-
-  pull_request: 
-
-    branches: [ main ] 
+   branches: 
+     - "master"
 
  
 
